@@ -1,3 +1,6 @@
+2008-10-08   D. V. Wiebe <getdata@ketiltrout.net>  svn:121
+	* src/getdata.h.in: Add forward declarations for public functions.
+
 2008-10-08   D. V. Wiebe <getdata@ketiltrout.net>  svn:120
 	* src/putdata.c (putdata64): Fail if passed a CONST or STRING field code.
 	* src/string.c (put_string): Added.
